Add hint for coderantine adventurer

--- a/BlazorApp2/Pages/Index.razor
+++ b/BlazorApp2/Pages/Index.razor
@@ -68,6 +68,10 @@
     </ul>
 </section>
 
+<div style="display:none;">
+    Adventurer, I am suprised that you end up here. Apparently this has nothing to do with your quest. But I like your curiosity, so here is a hint that you can use now or later.  https://stylesuxx.github.io/steganography/
+</div>
+
 
 @code {
 
