--- a/BlazorApp2/Pages/_Host.cshtml
+++ b/BlazorApp2/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="terminal-nav">
             <header class="terminal-logo">
-                <div class="logo terminal-prompt"><a asp-page="Index" class="no-style">BlazorApp2</a></div>
+                <div class="logo terminal-prompt"><a asp-page="" class="no-style">BlazorApp2</a></div>
             </header>
             <nav class="terminal-menu">
                 <ul>
